--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = ">=3.10.0,<3.11"
 requests = "2.31.0"
 flask = "2.3.3"
+flask-cors = "4.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
