--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = ">=3.10.0,<3.11"
 requests = "2.31.0"
 flask = "2.3.3"
 flask-cors = "4.0.0"
+markdown = "3.4.4"
+beautifulsoup4 = "4.12.2"
+bs4 = "^0.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
