--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask-cors = "4.0.0"
 markdown = "3.4.4"
 beautifulsoup4 = "4.12.2"
 bs4 = "^0.0.1"
+spacy = "3.6.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
